@@ -1,6 +1,7 @@
 Version 1.2
 ~~~~~~~~~~~
 * mk5dir -- add suffix to distinguish otherwise identically named scans
+* Clean up permissions and ownership issues when spawning jobs
 * Version for DiFX-1.5.2
 
 Version 1.1
